# SaaS

./: .metadata  README.md  installed_dependances.md  project_dir.md  pubspec.yaml
backend/: package-lock.json  package.json
backend/auth/digital_identification/: .env  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
backend/auth/digital_identification/config/: digital_identification.env
backend/auth/digital_identification/db/: schema.sql
backend/auth/digital_identification/proto/: identity.proto  stanforis_digital_identity.proto
backend/auth/digital_identification/src/: app.module.ts  lib.rs  main.rs  main.ts  nats.ts
backend/auth/digital_identification/src og/: main.ts
backend/auth/digital_identification/src og/digital_identity/: digital_identity.controller.ts  digital_identity.grpc.ts  digital_identity.module.ts  digital_identity.service.ts
backend/auth/digital_identification/src og/digital_identity/dto/: digital_identity.dto.ts  enums.ts
backend/auth/digital_identification/src/db/: postgres.rs
backend/auth/digital_identification/src/digital_identity/: digital_identity.controller.ts  digital_identity.grpc.ts  digital_identity.module.ts  digital_identity.service.ts
backend/auth/digital_identification/src/digital_identity/db/: surreal.service.ts
backend/auth/digital_identification/src/digital_identity/dto/: digital_identity.dto.ts  enums.ts
backend/auth/digital_identification/src/grpc/: identity_service.rs
backend/auth/digital_identification/src/models/: identity.rs
docs/: DEPENDENCIES_RULES.md  workflow.md  (+2 more)
(+944 files in other folders)
